--- a/src/main/resources/theme/play/teammatchmaking/matchmaking_chat.fxml
+++ b/src/main/resources/theme/play/teammatchmaking/matchmaking_chat.fxml
@@ -14,7 +14,7 @@
         <children>
             <WebView fx:id="messagesWebView" VBox.vgrow="ALWAYS" minHeight="100.0" minWidth="100.0" prefHeight="-1.0" prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             <TextField fx:id="messageTextField" maxWidth="1.7976931348623157E308" onAction="#onSendMessage"
-                       promptText="%chat.messagePrompt" styleClass="tmm">
+                       promptText="%chat.messagePrompt" styleClass="tmm-chat">
             </TextField>
         </children>
     </VBox>
