Indicate friends in game
Looks up online friends and matches these to the players inside the
game lobby.
Games with friends are highlighted

Fixes #1966

--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -955,7 +955,15 @@
   -fx-font-size: 1.2em;
 }
 
+.game-card:friend{
+  -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, -fx-accent, -fx-base 100%);
+}
+
 .table-row-cell {
   -fx-border-color: null;
   -fx-border-width: 0;
+}
+
+.table-row-cell:friend{
+  -fx-background-color: linear-gradient(from 0% 0% to 100% 100%, -fx-accent, -fx-base 100%);
 }
