--- a/src/main/resources/theme/vault/vault_entity.fxml
+++ b/src/main/resources/theme/vault/vault_entity.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXSpinner?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Pagination?>
 <?import javafx.scene.control.ScrollPane?>
@@ -13,7 +14,6 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.ComboBox?>
 <BorderPane fx:id="root" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <center>
         <StackPane fx:id="vaultRoot">
@@ -29,7 +29,7 @@
                         <Button fx:id="manageModsButton" text="%modVault.manageMods"
                                 visible="false"/>
                     </HBox>
-                    <Separator maxWidth="1.7976931348623157E308"/>
+                    <Separator fx:id="searchSeparator" maxWidth="1.7976931348623157E308"/>
                     <HBox spacing="10.0">
                         <Button fx:id="backButton" mnemonicParsing="false" text="%back">
                             <graphic>
