--- a/src/main/resources/theme/chat/chat_user_category.fxml
+++ b/src/main/resources/theme/chat/chat_user_category.fxml
@@ -3,7 +3,8 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.chat.ChatUserItemCategoryController"
+<VBox xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.faforever.client.chat.ChatCategoryItemController"
       xmlns="http://javafx.com/javafx/8.0.141">
-    <Label fx:id="chatUserCategoryRoot" text="Label" styleClass="chat-user-list-category"/>
+    <Label fx:id="chatUserCategoryRoot" text="Label" onContextMenuRequested="#onContextMenuRequested"
+           styleClass="chat-user-list-category"/>
 </VBox>
