--- a/src/main/resources/theme/vault/map/map_detail.fxml
+++ b/src/main/resources/theme/vault/map/map_detail.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import com.jfoenix.controls.JFXProgressBar?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
@@ -11,10 +11,10 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import java.lang.String?>
-<?import javafx.scene.layout.Region?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="mapDetailRoot" maxHeight="1.7976931348623157E308"
             maxWidth="1.7976931348623157E308" onMouseClicked="#onDimmerClicked" styleClass="dimmer"
             xmlns="http://javafx.com/javafx/10.0.2" fx:controller="com.faforever.client.map.MapDetailController">
@@ -51,7 +51,7 @@
                                              pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER"
                                              GridPane.rowSpan="2147483647" GridPane.valignment="TOP"/>
                                   <VBox GridPane.columnIndex="1" GridPane.columnSpan="2147483647"
-                                        GridPane.hgrow="ALWAYS">
+                                        GridPane.hgrow="ALWAYS" GridPane.rowIndex="0">
                                       <children>
                                           <Label fx:id="nameLabel" styleClass="h1" text="&lt;Title&gt;"/>
                                           <Label fx:id="mapIdLabel" text="#&lt;id&gt;"/>
@@ -75,16 +75,16 @@
                                           <Region styleClass="icon,date-icon"/>
                                       </graphic>
                                   </Label>
-                                  <VBox alignment="TOP_RIGHT" spacing="10.0" GridPane.columnIndex="1"
+                                  <VBox alignment="TOP_RIGHT" spacing="10.0" GridPane.columnIndex="5"
                                         GridPane.columnSpan="2147483647">
                                       <HBox alignment="TOP_RIGHT" spacing="10.0">
                                           <children>
                                               <Button fx:id="createGameButton" defaultButton="true"
-                                                         mnemonicParsing="false" onAction="#onCreateGameButtonClicked"
-                                                         text="%games.create"/>
+                                                      mnemonicParsing="false" onAction="#onCreateGameButtonClicked"
+                                                      text="%games.create"/>
                                               <Button fx:id="installButton" defaultButton="true"
-                                                         mnemonicParsing="false" onAction="#onInstallButtonClicked"
-                                                         text="%mapVault.installButtonFormat"/>
+                                                      mnemonicParsing="false" onAction="#onInstallButtonClicked"
+                                                      text="%mapVault.installButtonFormat"/>
                                               <Button fx:id="uninstallButton" mnemonicParsing="false"
                                                          onAction="#onUninstallButtonClicked"
                                                          text="%mapVault.uninstall"/>
