--- a/src/main/resources/theme/vault/mod/mod_detail.fxml
+++ b/src/main/resources/theme/vault/mod/mod_detail.fxml
@@ -34,22 +34,34 @@
                                         <RowConstraints minHeight="10.0" vgrow="NEVER" />
                                     </rowConstraints>
                                     <children>
-                                        <Label fx:id="nameLabel" maxWidth="1.7976931348623157E308" styleClass="h1" text="&lt;Name&gt;" GridPane.columnIndex="1" GridPane.columnSpan="2" />
-                                        <ImageView fx:id="thumbnailImageView" fitHeight="128.0" fitWidth="128.0" pickOnBounds="true" preserveRatio="true" GridPane.rowSpan="2" />
-                                        <VBox fx:id="progressPane" alignment="CENTER_LEFT" maxWidth="300.0" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                                        <Label fx:id="nameLabel" maxWidth="1.7976931348623157E308" styleClass="h1"
+                                               text="&lt;Name&gt;" GridPane.columnIndex="1" GridPane.columnSpan="2"/>
+                                        <ImageView fx:id="thumbnailImageView" fitHeight="128.0" fitWidth="128.0"
+                                                   pickOnBounds="true" preserveRatio="true" GridPane.rowSpan="2"/>
+                                        <VBox fx:id="progressPane" alignment="CENTER_LEFT" maxWidth="300.0"
+                                              GridPane.columnIndex="2" GridPane.halignment="RIGHT"
+                                              GridPane.rowIndex="1">
                                             <children>
-                                                <Label fx:id="progressLabel" text="" />
-                                                <JFXProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308" progress="0.0" />
+                                                <Label fx:id="progressLabel" text=""/>
+                                                <JFXProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308"
+                                                                progress="0.0"/>
                                             </children>
                                         </VBox>
-                                        <Button fx:id="uninstallButton" mnemonicParsing="false" onAction="#onUninstallButtonClicked" text="%modVault.uninstall" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-                                        <Button fx:id="installButton" defaultButton="true" mnemonicParsing="false" onAction="#onInstallButtonClicked" styleClass="highlighted-button" text="%modVault.install" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-                              <VBox GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                 <children>
-                                    <Label fx:id="authorLabel" text="&lt;Author&gt;" />
-                                     <Label fx:id="uploaderLabel" text="&lt;Uploader&gt;" wrapText="true"/>
-                                 </children>
-                              </VBox>
+                                        <Button fx:id="uninstallButton" mnemonicParsing="false"
+                                                onAction="#onUninstallButtonClicked" text="%modVault.uninstall"
+                                                GridPane.columnIndex="3" GridPane.halignment="RIGHT"
+                                                GridPane.rowIndex="1"/>
+                                        <Button fx:id="installButton" defaultButton="true" mnemonicParsing="false"
+                                                onAction="#onInstallButtonClicked" styleClass="highlighted-button"
+                                                text="%modVault.install" GridPane.columnIndex="3"
+                                                GridPane.halignment="RIGHT" GridPane.rowIndex="1"/>
+                                        <VBox GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                            <children>
+                                                <Label fx:id="authorLabel" text="&lt;Author&gt;"/>
+                                                <Label fx:id="idLabel" text="&lt;ID&gt;"/>
+                                                <Label fx:id="uploaderLabel" text="&lt;Uploader&gt;" wrapText="true"/>
+                                            </children>
+                                        </VBox>
                                     </children>
                                 </GridPane>
                                 <Label fx:id="modDescriptionLabel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="&lt;Description&gt;" wrapText="true" />
