--- a/src/main/resources/theme/style-webview.css
+++ b/src/main/resources/theme/style-webview.css
@@ -45,6 +45,7 @@ a {
 
 img.avatar,
 img.country-flag {
+  margin-left: 1px;
   margin-right: 0.2em;
 }
 
@@ -89,7 +90,6 @@ img.country-flag {
   /* Use same as -fx-light-text-color */
   color: #DCDCDC;
   cursor: pointer;
-  font-weight: bold;
 }
 
 .chat-section .clan-tag:hover {
@@ -122,6 +122,7 @@ img.country-flag {
 .chat-section.compact,
 .chat-section.compact .messages-wrapper {
   width: 100%;
+  vertical-align: top;
 }
 
 .chat-section.compact img.avatar[src=""],
@@ -129,12 +130,22 @@ img.country-flag {
   visibility: hidden;
 }
 
-.chat-section.compact td.author {
+.chat-section.compact td.decoration {
+  white-space: nowrap;
   vertical-align: top;
-  min-width: 200px;
 }
 
-.chat-section.compact td.author * {
+.chat-section.compact td.author {
+  vertical-align: top;
+  text-align: left;
+  min-width: 130px;
+  max-width: 130px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.chat-section.compact td.decoration * {
   vertical-align: middle;
   line-height: 1em;
 }
