--- a/src/main/resources/theme/play/teammatchmaking/matchmaking_queue_card.fxml
+++ b/src/main/resources/theme/play/teammatchmaking/matchmaking_queue_card.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
@@ -13,7 +13,8 @@
       spacing="10.0" HBox.hgrow="ALWAYS" alignment="TOP_CENTER">
         <ToggleButton fx:id="joinLeaveQueueButton" styleClass="tmm, queue" alignment="TOP_LEFT" text="&lt;QueueName&gt;"
                       maxWidth="1.7976931348623157E308" onAction="#onJoinLeaveQueueClicked" />
-        <JFXButton text="MAPLIST" styleClass="tmm, player-card-text" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" />
+        <Button fx:id="mapPoolButton" text="%teammatchmaking.mapPool" styleClass="tmm, player-card-text" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308"
+        onAction="#showMapPool"/>
     <FlowPane hgap="10">
         <Label fx:id="queuePopTimeLabel" styleClass="player-card-text" text="%teammatchmaking.queuePopTimer"/>
         <Label fx:id="playersInQueueLabel" styleClass="player-card-text" text="%teammatchmaking.playersInQueue"/>
